tests/ui/error-codes/E0029.stderr
error[E0029]: only `char` and numeric types are allowed in range patterns
  --> $DIR/E0029.rs:5:9
   |
LL |         "hello" ..= "world" => {}
   |         -------^^^^^-------
   |         |           |
   |         |           this is of type `&'static str` but it should be `char` or numeric
   |         this is of type `&'static str` but it should be `char` or numeric

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0029`.
